--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -91,3 +91,12 @@ File: App Css File
 @import "plugins/leaflet-maps";
 @import "plugins/sweetalert2";
 @import "plugins/rangeslider";
+
+// th{
+//     color: #000000 !important;
+//     font-weight: 800 !important;
+
+// }
+// body{
+//     font-family: Inter, -apple-system, BlinkMacSystemFont, "San Francisco", "Segoe UI", Roboto, "Helvetica Neue", sans-serif !important;
+// }
