--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -371,8 +371,8 @@ $escaped-characters: (
 
 $enable-caret:                true;
 $enable-rounded:              true;
-$enable-shadows:              false;
-$enable-gradients:            false;
+$enable-shadows:              true;
+$enable-gradients:            true;
 $enable-transitions:          true;
 $enable-reduced-motion:       true;
 $enable-smooth-scroll:        true;
